--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coffee-site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://andrea-march.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -40,6 +41,5 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
-  },
-  "homepage": "http://andrea-march.github.io/"
+  }
 }
